fix: update status api
