# data/src/main/java/ru/radiationx/data/api/status/model/Status.kt
@@ -1,0 +1,15 @@
+package ru.radiationx.data.api.status.model
+
+data class Status(
+    val request: Request?,
+    val isAlive: Boolean?,
+    val availableApiEndpoints: List<String>?
+) {
+
+    data class Request(
+        val ip: String?,
+        val country: String?,
+        val isoCode: String?,
+        val timeZone: String?
+    )
+}
